manifests/app/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskapp
  labels:
    name: taskapp
